--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@
     margin: 0;
     padding: 0;
     background-color: var(--color-fondo);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Inter', sans-serif;
     color: var(--font-color);
 }
 
 .header{
-    font-size: 5vw;
+    font-size: 3vw;
     text-align: center;
-    margin-top: 8vw;
+    margin-top: 7vw;
     margin-bottom: 2vw;
 }
 
@@ -27,57 +27,97 @@
 
 .h1{
     font-weight: 500;
-    margin: 4vw 0;
+    font-size: 1.5vw;
+    margin: 1vw 0;
+    text-align: center;
+    padding-bottom: 2vw;
+    font-weight: bold;
+    border-bottom: 0.5px solid var(--border-input);
 }
 
 .h2{
     font-weight: 300;
     border-bottom: solid 2px var(--color-fondo);
     padding-bottom: 2vw;
-    margin: 4vw 0 2.5vw 0;
+    margin: 2vw 0;
+    font-size: 1.2vw;
+    font-weight: bold;
 }
 
 .h3{
-    font-weight: 100;
-    margin: 2vw 0 2.5vw 0;
+    font-weight: normal;
+    font-size: 1.1vw;
+    margin: 2vw 0 1.5vw 0;
 }
 
 /* Inputs */
 
 .label{
     margin: 0.5vw 0 1vw 0;
+    font-weight: normal;
 }
 
 .label-text{
-    font-size: 1.2vw;
+    font-size: 0.9vw;
     color: var(--label-color);
-    margin-top: 0.2vw;
+    margin-top: 0;
 }
 
-input{
+.label-titulo{
+    font-size: 1.1vw;
+}
+
+.label-checkbox{
+    font-size: 1.1vw;
+}
+
+.input-text, .input{
+    padding: 1%;
+    width: 50%;
+    font-size: 1.2vw;
     margin-bottom: 1vw;
-    font-size: 1.5vw;
     border: solid 1px #b8bdc9;
     border-radius: 4px;
+    font-weight: lighter;
 }
 
-.input-text{
-    padding: 1%;
+
+.input-largo{
+    width: 100%;
 }
 
 .input-date{
     padding: 1%;
     width: 50%;
+    margin-bottom: 1vw;
+    border: solid 1px #b8bdc9;
+    border-radius: 4px;
+    font-weight: lighter;
+    font-size: 1.1vw;
 }
 
 .input-datetime{
     padding: 1%;
     width: 50%;
+    font-size: 1.1vw;
+    margin-bottom: 1vw;
+    border: solid 1px #b8bdc9;
+    border-radius: 4px;
+    font-weight: lighter;
 }
 
 .input-radio{
     width: 1.7vw;
     height: 1.7vw;
+    margin-bottom: 1vw;
+    border: solid 1px #b8bdc9;
+    border-radius: 4px;
+    font-weight: lighter;
+}
+
+.input-checkbox{
+    width: 1.5vw;
+    height: 1.5vw;
 }
 
 .select{
@@ -85,51 +125,28 @@ input{
     width: 50%;
     border: solid 1px #b8bdc9;
     border-radius: 4px;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     margin-bottom: 1vw;
+    font-weight: lighter;
 }
 
-/* Geolocalización */
-
-#section-geolocalizacion{
-    border-top: solid 2px var(--color-fondo);
-    padding-top: 2vw;
-}
-
-.parent {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
-    border: solid 3px var(--border-input);
-    border-radius: 4px;
-    padding: 2%;
-    width: 100%;
-    font-size: 1.4vw;
-    align-items: center;
-}
-.div1 { grid-area: 1 / 1 / 2 / 2; }
-.div2 { grid-area: 1 / 2 / 2 / 3; }
-.div3 { grid-area: 2 / 1 / 3 / 2; }
-.div4 { grid-area: 2 / 2 / 3 / 3; }
-
-.div1, .div3{
-    width: 20%;
-    padding: 1%;
-}
-
-.div2, .div4{
-    width: 100%;
-    background-color: rgba(239, 239, 239, 0.3);
-    padding: 5%;
+.label-select{
+    font-size: 1.1vw;
+    margin: 2vw 0;
+    font-weight: bold;
+    color: var(--font-color);
 }
 
 /* Diseño específico */
 
+.div-par{
+    display: flex;
+    flex-direction: column;
+}
+
 #user-form{
     background-color: white;
-    width: 60%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -160,8 +177,8 @@ input{
 
 .dos-divs-juntos div input{
     margin-top: 1vw;
-    width: 25vw;
     padding: 2%;
+    width: 21vw;
 }
 
 .dos-divs-juntos div label{
@@ -179,15 +196,16 @@ input{
 }
 
 .div-separacion{
-    margin: 2vw 0;
-}
-
-.label-select{
-    font-size: 1.4vw;
-    margin: 2vw 0;
+    margin: 1vw 0;
 }
 
 /* Condición salud paciente */
+
+.div-pregunta-radio{
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+}
 
 .div-dos-radio{
     display: flex;
@@ -227,6 +245,27 @@ input{
 .select-scroll::-webkit-scrollbar-track{
     background-color: #eee;
     border-radius: 4px;
+}
+
+.elementos-de-seguridad{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.div-checkbox{
+    display: flex;
+    align-items: center;
+}
+
+.div-checkbox .label-checkbox{
+    margin-left: 0.6vw;
+}
+
+.div-tres-radio{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
 }
 
 /* Botones */
