--- a/style.css
+++ b/style.css
@@ -1,19 +1,14 @@
 /* Formatos */
 
-:root{
-    --font-color: #2C3345;
-    --color-fondo: #F3F3FE;
-    --border-input: #b8bdc9;
-    --label-color: #57647e;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400&display=swap');
 
 .body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: var(--color-fondo);
+    background-color: #F3F3FE;
     font-family: 'Inter', sans-serif;
-    color: var(--font-color);
+    color: #2C3345;
 }
 
 .header{
@@ -32,12 +27,12 @@
     text-align: center;
     padding-bottom: 2vw;
     font-weight: bold;
-    border-bottom: 0.5px solid var(--border-input);
+    border-bottom: 0.5px solid #b8bdc9;
 }
 
 .h2{
     font-weight: 300;
-    border-bottom: solid 2px var(--color-fondo);
+    border-bottom: solid 2px #F3F3FE;
     padding-bottom: 2vw;
     margin: 2vw 0;
     font-size: 1.2vw;
@@ -57,21 +52,21 @@
     font-weight: normal;
 }
 
-.label-text{
+.labelText{
     font-size: 0.9vw;
-    color: var(--label-color);
+    color: #57647e;
     margin-top: 0;
 }
 
-.label-titulo{
+.labelTitulo{
     font-size: 1.1vw;
 }
 
-.label-checkbox{
+.labelCheckbox{
     font-size: 1.1vw;
 }
 
-.input-text, .input{
+.inputText, .input{
     padding: 1%;
     width: 50%;
     font-size: 1.2vw;
@@ -82,11 +77,11 @@
 }
 
 
-.input-largo{
+.inputLargo{
     width: 100%;
 }
 
-.input-date{
+.inputDate{
     padding: 1%;
     width: 50%;
     margin-bottom: 1vw;
@@ -96,7 +91,7 @@
     font-size: 1.1vw;
 }
 
-.input-datetime{
+.inputDateTime{
     padding: 1%;
     width: 50%;
     font-size: 1.1vw;
@@ -106,7 +101,7 @@
     font-weight: lighter;
 }
 
-.input-radio{
+.inputRadio{
     width: 1.7vw;
     height: 1.7vw;
     margin-bottom: 1vw;
@@ -115,7 +110,7 @@
     font-weight: lighter;
 }
 
-.input-checkbox{
+.inputCheckbox{
     width: 1.5vw;
     height: 1.5vw;
 }
@@ -130,21 +125,21 @@
     font-weight: lighter;
 }
 
-.label-select{
+.labelSelect{
     font-size: 1.1vw;
     margin: 2vw 0;
     font-weight: bold;
-    color: var(--font-color);
+    color: #2C3345;
 }
 
 /* Diseño específico */
 
-.div-par{
+.divPar{
     display: flex;
     flex-direction: column;
 }
 
-#user-form{
+.userForm{
     background-color: white;
     width: 45%;
     display: flex;
@@ -157,7 +152,7 @@
 
 /* Establecimiento sanitario */
 
-#establecimiento-sanitario{
+.establecimientoSanitario{
     margin-top: 2vw;
     display: flex;
     flex-direction: column;
@@ -165,117 +160,125 @@
 
 /* Datos personales */
 
-.dos-divs-juntos{
+.dosDivsJuntos{
     display: flex;
     justify-content: space-between;
 }
 
-.dos-divs-juntos div{
+.dosDivsJuntos div{
     display: flex;
     flex-direction: column-reverse;
 }
 
-.dos-divs-juntos div input{
+.dosDivsJuntos div input{
     margin-top: 1vw;
     padding: 2%;
     width: 21vw;
 }
 
-.dos-divs-juntos div label{
+.dosDivsJuntos div label{
     margin-top: .5vw;
 }
 
-.fecha-nacimiento{
+.fechaNacimiento{
     display: flex;
     flex-direction: column-reverse;
 }
 
-.div-largo{
+.divLargo{
     display: flex;
     flex-direction: column-reverse;
 }
 
-.div-separacion{
+.divSeparacion{
     margin: 1vw 0;
 }
 
 /* Condición salud paciente */
 
-.div-pregunta-radio{
+.divPreguntaRadio{
     display: flex;
     justify-content: space-between;
     width: 60%;
 }
 
-.div-dos-radio{
+.divDosRadio{
     display: flex;
     align-items: center;
 }
 
-.div-dos-radio label{
+.divDosRadio label{
     margin: 0 0 1vw 0.5vw;
 }
 
 /* Ingreso paciente guardia */
 
-.div-select{
+.divSelect{
     margin: 2vw 0;
 }
 
-.div-select-multiple{
+.divSelectMultiple{
     margin: 2vw 0;
 }
 
-.select-scroll{
+.selectScroll{
     overflow-y: auto;
     width: 100%;
     height: 40vw;
     padding: 2%;
 }
 
-.select-scroll::-webkit-scrollbar{
+.selectScroll::-webkit-scrollbar{
     width: 8px;
 }
 
-.select-scroll::-webkit-scrollbar-thumb{
+.selectScroll::-webkit-scrollbar-thumb{
     background-color: #888;
     border-radius: 4px;
 }
 
-.select-scroll::-webkit-scrollbar-track{
+.selectScroll::-webkit-scrollbar-track{
     background-color: #eee;
     border-radius: 4px;
 }
 
-.elementos-de-seguridad{
+.divMultipleCheckbox{
     display: flex;
     justify-content: space-between;
     width: 80%;
 }
 
-.div-checkbox{
+.divMultipleCheckboxLargo{
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin-bottom: 1vw;
+}
+
+.divCheckbox{
     display: flex;
     align-items: center;
 }
 
-.div-checkbox .label-checkbox{
+.divCheckbox .labelCheckbox{
     margin-left: 0.6vw;
 }
 
-.div-tres-radio{
+.divTresRadio{
     display: flex;
     justify-content: space-between;
     width: 80%;
+    margin-bottom: 1.5vw;
 }
 
 /* Botones */
 
-.botones-form{
+.botonesForm{
     display: flex;
     justify-content: flex-end;
 }
 
-.btn-enviar{
+.btnEnviar{
     width: 9vw;
     height: 3.5vw;
     color: white;
